[package]
name = "dartunifrac"
authors = ["jianshuzhao@yahoo.com"]
repository = "https://github.com/jianshu93/dartunifrac.git"
version = "0.1.0"
edition = "2024"
description = "Ultra-fast approximate UniFrac via Weighted MinHash"
license = "MIT OR Apache-2.0"
keywords = ["unifrac", "phylogenetic", "MinHash", "succint", "Jaccard"]

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
bitvec = "1.0"
newick = "0.11"
succparen = "0.0.2"
num_cpus = "1"
ryu = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["static", "zlib"] }
dartminhash = "0.1.1"
anndists = { git = "https://github.com/jean-pierreBoth/anndists", default-features = false, features = ["stdsimd"] }