[package]
name = "dartunifrac"
authors = ["jianshuzhao@yahoo.com"]
repository = "https://github.com/jianshu93/dartunifrac.git"
version = "0.2.2"
edition = "2024"
description = "Ultra-fast approximate UniFrac via Weighted MinHash"
license = "MIT OR Apache-2.0"
keywords = ["unifrac", "phylogenetic", "MinHash", "succint", "Jaccard"]

[[bin]]

name = "dartunifrac"
path = "src/dartunifrac.rs"

[[bin]]

name = "striped_unifrac"
path = "src/striped_unifrac.rs"

[dependencies]
emojis = "0.7"
anyhow = "1"
clap = { version = "4.3", features = ["derive", "string"] }
zstd = { version = "0.13", features = ["zstdmt"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
bitvec = "1.0"
newick = "0.11.0"
succparen = "0.0.2"
num_cpus = "1"
ryu = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["static", "zlib"] }
dartminhash = "0.1.1"
anndists = { git = "https://github.com/jean-pierreBoth/anndists", default-features = false, features = ["stdsimd"] }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
fpcoa = { git = "https://github.com/jianshu93/fpcoa" }

[features]
default = []

intel-mkl-static = ["fpcoa/intel-mkl-static"]
openblas-system = ["fpcoa/openblas-system"]
openblas-static = ["fpcoa/openblas-static"]
macos-accelerate = ["fpcoa/macos-accelerate"]

